-header scroll on mobile fix

--- a/css/header-footer.scss
+++ b/css/header-footer.scss
@@ -317,6 +317,9 @@ footer {
 }
 
 @media only screen and (max-width: 440px) {
+  body.open-menu-container {
+    overflow: hidden;
+  }
   .header-nav-bar {
     &.bg-opacity-change {
       background-color: $header-bg-color;
@@ -329,11 +332,13 @@ footer {
       height: 90vh !important;
       top: 0 !important;
     }
+
+    ul.nav-list-container {
+      padding: 0 0.375rem !important;
+      overflow-y: auto !important;
+    }
   }
-  .nav-list-container {
-    padding: 0 0.375rem !important;
-    overflow-y: auto !important;
-  }
+
   .nav-items {
     display: flex !important;
     align-items: center !important;
